added model description

--- a/crop_yield_predictor/predictions/templates/predict.html
+++ b/crop_yield_predictor/predictions/templates/predict.html
@@ -31,8 +31,12 @@
         <div id="right-section">
             <!-- Model Description (30%) -->
             <div id="model-description">
-                <h2>Description about the Model</h2>
-                <p>This model predicts economic impact, yield, or other agricultural insights using cutting-edge algorithms.</p>
+                <h2>Model Description</h2>
+                <p>For the given problem, the model addresses the prediction of crop yield under changed climate conditions and farming practices.
+                    The Gradient Boosting Regression model effectively predicts crop yield by analyzing factors such as climate, soil health, 
+                    farming methods, and geographical data. It handles complex interactions, supports scenario planning, adapts to new data, 
+                    and highlights critical factors for agricultural decision-making across diverse regions and crops.
+                </p>
             </div>
     
             <!-- Graph Section (70%) -->
