--- a/crop_yield_predictor/predictions/templates/predict_1.html
+++ b/crop_yield_predictor/predictions/templates/predict_1.html
@@ -35,8 +35,11 @@
         <div id="right-section">
             <!-- Model Description (30%) -->
             <div id="model-description">
-                <h2>Description about the Model</h2>
-                <p>This model predicts economic impact, yield, or other agricultural insights using cutting-edge algorithms.</p>
+                <h2>Model Description</h2>
+                <p>TThe Random Forest Regression model predicts the economic impact of climate change using features like average temperature and CO2 emissions. 
+                    By leveraging 100 decision trees, it captures both linear and nonlinear relationships while minimizing overfitting. 
+                    It supports scenario analysis, adapts to new data, and highlights key factors driving economic impact for strategic decision-making.
+                </p>
             </div>
     
             <!-- Graph Section (70%) -->
