--- a/crop_yield_predictor/predictions/templates/predict_form.html
+++ b/crop_yield_predictor/predictions/templates/predict_form.html
@@ -37,8 +37,11 @@
         <div id="right-section">
             <!-- Model Description (30%) -->
             <div id="model-description">
-                <h2>Description about the Model</h2>
-                <p>This model predicts economic impact, yield, or other agricultural insights using cutting-edge algorithms.</p>
+                <h2>Model Description</h2>
+                <p>The Deep Neural Network (DNN) model predicts Total Climate Impact by learning complex, 
+                    nonlinear relationships between features like temperature, CO2 emissions, and extreme weather events. With multiple hidden layers, 
+                    it captures intricate feature interactions. The model is scalable, allowing the addition of new variables to improve predictions 
+                    as more climate data becomes available.</p>
             </div>
     
             <!-- Graph Section (70%) -->
