--- a/crop_yield_predictor/predictions/templates/predict_lstm_form.html
+++ b/crop_yield_predictor/predictions/templates/predict_lstm_form.html
@@ -36,8 +36,11 @@
         <div id="right-section">
             <!-- Model Description (30%) -->
             <div id="model-description">
-                <h2>Description about the Model</h2>
-                <p>This model predicts economic impact, yield, or other agricultural insights using cutting-edge algorithms.</p>
+                <h2>Model Description</h2>
+                <p>This model uses an RNN to predict Total Climate Impact, effectively capturing complex, 
+                    nonlinear relationships between features like temperature, precipitation, and CO2 emissions.
+                     RNNs are well-suited for sequential or temporal data, making them ideal for capturing dependencies in climate variables. 
+                    Their ability to maintain hidden states allows the model to learn patterns across interconnected climate factors over time.</p>
             </div>
     
             <!-- Graph Section (70%) -->
