corrected some small errors

--- a/crop_yield_predictor/predictions/templates/predict_lstm_form.html
+++ b/crop_yield_predictor/predictions/templates/predict_lstm_form.html
@@ -24,7 +24,7 @@
                 <button type="submit">Predict</button>
             </form>
 
-            {% if result %}
+            {% if prediction %}
             <div class="result">
                 <h3>Outcome of Prediction</h3>
                 <p>{{ prediction }}</p>
