--- a/crop_yield_predictor/predictions/templates/predict_form.html
+++ b/crop_yield_predictor/predictions/templates/predict_form.html
@@ -25,7 +25,7 @@
                 
                 <button type="submit">Predict</button>
             </form>
-            {% if result %}
+            {% if prediction %}
             <div class="result">
                 <h3>Outcome of Prediction</h3>
                 <p>Prediction Result: {{ prediction }}</p>
