--- a/predictions/templates/predict_form.html
+++ b/predictions/templates/predict_form.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'predictions/predict.css/' %}">
-    <link rel="stylesheet" href="{% static 'predictions/predict.css/' %}">
+    <link rel="stylesheet" href="{% static 'predictions/predict.css' %}">
     <script src="{% static 'predictions/script.js' %}" defer></script>
     <title>Climate Impact Prediction</title>
 </head>
